--- a/src/app/components/business/menu-list/menu-list.module.scss
+++ b/src/app/components/business/menu-list/menu-list.module.scss
@@ -40,9 +40,10 @@
 
 .list__item {
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
   column-gap: 8px;
+  cursor: pointer;
 }
 
 .active {
