--- a/src/app/components/business/book/book.module.scss
+++ b/src/app/components/business/book/book.module.scss
@@ -51,8 +51,9 @@
 
     &__img {
       grid-area: img;
-      width: 100%;
-      height: auto;
+      width: 75%;
+      margin-left: auto;
+      margin-right: auto;
     }
 
     &__descr {
@@ -97,14 +98,14 @@
     &__wrapper {
       display: flex;
       flex-direction: column;
-      justify-content: start;
-      align-items: start;
+      justify-content: flex-start;
+      align-items: flex-start;
     }
 
     &__rate__wrapper {
       display: flex;
       align-items: center;
-      justify-content: start;
+      justify-content: flex-start;
       margin: 18px 0;
       column-gap: 20px;
     }
