--- a/src/app/components/layout/header/header.module.scss
+++ b/src/app/components/layout/header/header.module.scss
@@ -3,7 +3,7 @@
 .header {
   display: flex;
   align-items: center;
-  justify-content: start;
+  justify-content: flex-start;
   padding: 10px 0;
   margin: 30px 0;
 }
