--- a/src/app/components/business/book-list/book-item/book-item.module.scss
+++ b/src/app/components/business/book-list/book-item/book-item.module.scss
@@ -13,6 +13,8 @@
     // transform: scale(1.02) translate3d(3px, 3px, 3px);
   }
 
+  max-height: 470px;
+
   transition: $transition-m all ease-in-out;
 
   &_tile {
@@ -49,6 +51,10 @@
 
     .rating {
       margin-bottom: 25px;
+
+      @include mqS() {
+        margin-bottom: 16px;
+      }
     }
 
     .name {
@@ -87,13 +93,19 @@
     flex-direction: column;
 
     .img {
-      display: block;
-      width: 75%;
-      margin: 0 auto 15px auto;
+      @include mqS() {
+        max-width: 175px;
+      }
+      margin: 0 40px;
+      margin-bottom: 16px;
     }
 
     .rating {
       margin-bottom: 25px;
+
+      @include mqS() {
+        margin-bottom: 16px;
+      }
     }
 
     .name {
