--- a/src/app/components/business/book-list/book-item/book-item.module.scss
+++ b/src/app/components/business/book-list/book-item/book-item.module.scss
@@ -10,7 +10,7 @@
   border-radius: 12px;
 
   &:hover {
-    // transform: scale(1.02) translate3d(3px, 3px, 3px);
+    transform: scale(1.02) translate3d(3px, 3px, 3px);
   }
 
   max-height: 470px;
@@ -47,14 +47,13 @@
     }
     .img {
       width: 100%;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
     }
 
     .rating {
-      margin-bottom: 25px;
-
-      @include mqS() {
-        margin-bottom: 16px;
-      }
+      margin-bottom: 16px;
     }
 
     .name {
@@ -63,7 +62,6 @@
     }
 
     .author {
-      margin-bottom: 28px;
       color: $color-grey40;
     }
 
@@ -78,11 +76,9 @@
       &__wrapper {
         display: flex;
         justify-content: space-between;
-        margin-top: auto;
+        align-items: center;
 
-        @include mqM() {
-          flex-direction: column;
-        }
+        flex-wrap: wrap;
       }
     }
   }
@@ -93,10 +89,9 @@
     flex-direction: column;
 
     .img {
-      @include mqS() {
-        max-width: 175px;
-      }
-      margin: 0 40px;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
       margin-bottom: 16px;
     }
 
