--- a/src/app/components/ui/typography/typography.module.scss
+++ b/src/app/components/ui/typography/typography.module.scss
@@ -3,18 +3,18 @@
 .h1 {
   font-size: 52px;
   line-height: 64px;
-  @media (max-width: $mq-m) {
+  @include mqM() {
     font-size: 32px;
     line-height: 40px;
   }
 }
 
-@media (max-width: $mq-m) {
+@include mqM() {
 }
 .h2 {
   font-size: 44px;
   line-height: 54px;
-  @media (max-width: $mq-m) {
+  @include mqM() {
     font-size: 26px;
     line-height: 36px;
   }
@@ -22,7 +22,7 @@
 .h3 {
   font-size: 32px;
   line-height: 40px;
-  @media (max-width: $mq-m) {
+  @include mqM() {
     font-size: 18px;
     line-height: 28px;
   }
@@ -30,7 +30,7 @@
 .h4 {
   font-size: 32px;
   line-height: 40px;
-  @media (max-width: $mq-m) {
+  @include mqM() {
     font-size: 16px;
     line-height: 24px;
   }
@@ -38,7 +38,7 @@
 .h5 {
   font-size: 24px;
   line-height: 30px;
-  @media (max-width: $mq-m) {
+  @include mqM() {
     font-size: 14px;
     line-height: 18px;
   }
@@ -55,7 +55,7 @@
   font-weight: 600;
   font-size: 16px;
   line-height: 24px;
-  @media (max-width: $mq-m) {
+  @include mqM() {
     font-size: 16px;
     line-height: 24px;
   }
@@ -64,7 +64,7 @@
   font-weight: 600;
   font-size: 14px;
   line-height: 18px;
-  @media (max-width: $mq-m) {
+  @include mqM() {
     font-size: 14px;
     line-height: 18px;
   }
@@ -73,7 +73,7 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
-  @media (max-width: $mq-m) {
+  @include mqM() {
     font-size: 15px;
     line-height: 20px;
   }
@@ -82,7 +82,7 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 18px;
-  @media (max-width: $mq-m) {
+  @include mqM() {
     font-size: 12px;
     line-height: 18px;
   }
@@ -91,7 +91,7 @@
   font-weight: 500;
   font-size: 12px;
   line-height: 16px;
-  @media (max-width: $mq-m) {
+  @include mqM() {
     font-size: 12px;
     line-height: 16px;
   }
@@ -100,7 +100,7 @@
   font-weight: 400;
   font-size: 12px;
   line-height: 16px;
-  @media (max-width: $mq-m) {
+  @include mqM() {
     font-size: 12px;
     line-height: 16px;
   }
@@ -108,7 +108,7 @@
 .button-l {
   font-size: 16px;
   line-height: 150%;
-  @media (max-width: $mq-m) {
+  @include mqM() {
     font-size: 16px;
     line-height: 20px;
   }
@@ -116,7 +116,7 @@
 .button-s {
   font-size: 14px;
   line-height: 18px;
-  @media (max-width: $mq-m) {
+  @include mqM() {
     font-size: 12px;
     line-height: 18px;
   }
