--- a/src/app/styles/variables.scss
+++ b/src/app/styles/variables.scss
@@ -21,7 +21,11 @@ $color-positive: #00ca71;
 $color-negative: #f42c4f;
 
 $bg-positive: #ebf9f1;
+$bg-negative: #f42c4f;
+
+$bg-positive: #ebf9f1;
 $bg-negative: #feebea;
+
 $bg-btn-pressed: linear-gradient(233.73deg, #f83600 -16.08%, #f9d423 327.37%);
 $bg-btn-hover: linear-gradient(231.58deg, #f83600 -53.35%, #f9d423 297.76%);
 
