--- a/src/app/components/layout/container/container.module.scss
+++ b/src/app/components/layout/container/container.module.scss
@@ -1,13 +1,14 @@
 @import '../../../styles/mixins.scss';
 
 .container {
-  max-width: calc($container-max-w);
+  max-width: calc($container-max-w + 40px);
   padding-right: 20px;
   padding-left: 20px;
   margin-right: auto;
   margin-left: auto;
 
   @media (max-width: $mq-s) {
+    max-width: calc($container-max-w + 24px);
     padding-right: 12px;
     padding-left: 12px;
   }
